@@ -95,7 +95,9 @@ Bug Fixes
 
 * LUCENE-10470: Check if polygon has been successfully tessellated before we fail (we are failing some valid
   tessellations) and allow filtering edges that fold on top of the previous one. (Ignacio Vera)  
-  
+
+* LUCENE-10518: Relax field consistency check for old indices (Nhat Nguyen)
+
 Build
 ---------------------
 
